syntax = "proto3";
option go_package = "github.com/treeverse/lakefs/gateway/multipart";

import "google/protobuf/timestamp.proto";

package io.treeverse.lakefs.multipart;

// message data model for multipart.Upload struct
message UploadData {
  string upload_id = 1;
  string path = 2;
  google.protobuf.Timestamp creation_date = 3;
  string physical_address = 4;
  map<string, string> metadata = 5;
  string content_type = 6;
}
